# resume-optimization-crew

./: .env  README.md  app.py  pyproject.toml  str
output/: company_research.json  cover_letter.json  final_report.md  job_analysis.json  optimized_resume.md  resume_optimization.json
src/resume_crew/: crew.py  main.py  models.py
src/resume_crew/config/: agents.yaml  tasks.yaml
src/resume_crew/tools/: custom_tool.py
